// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exec info > logs additional info about pre-releases > logs additional info about pre-releases 1`] = `
"
Proxy Settings: none detected
Environment Variables: none detected

Application Data: /user/app/data/path
Browser Profiles: /user/app/data/path/to/browsers
Binary Caches: /user/path/to/binary/cache

Cypress Version: 0.0.0-development (pre-release)
System Platform: linux (Foo - OsVersion)
System Memory: 1.2 GB free 400 MB

This is a pre-release build of Cypress.
Build info:
  Commit SHA: abc123
  Commit Branch: someBranchName
  Commit Date: 2022-02-02T00:00:00.000Z
"
`;

exports[`exec info > logs if unbuilt development > logs additional info about development 1`] = `
"
Proxy Settings: none detected
Environment Variables: none detected

Application Data: /user/app/data/path
Browser Profiles: /user/app/data/path/to/browsers
Binary Caches: /user/path/to/binary/cache

Cypress Version: 0.0.0-development (pre-release)
System Platform: linux (Foo - OsVersion)
System Memory: 1.2 GB free 400 MB

This is the development (un-built) Cypress CLI.
"
`;

exports[`exec info > prints collected info without env vars > cypress info without browsers or vars 1`] = `
"
Proxy Settings: none detected
Environment Variables: none detected

Application Data: /user/app/data/path
Browser Profiles: /user/app/data/path/to/browsers
Binary Caches: /user/path/to/binary/cache

Cypress Version: 0.0.0-development (stable)
System Platform: linux (Foo - OsVersion)
System Memory: 1.2 GB free 400 MB
"
`;

exports[`exec info > prints proxy and cypress env vars > cypress info with proxy and vars 1`] = `
"
Proxy Settings:
HTTP_PROXY: some proxy variable
HTTPS_PROXY: another proxy variable
NO_PROXY: no proxy variable

Learn More: https://on.cypress.io/proxy-configuration

Environment Variables:
CYPRESS_ENV_VAR1: my Cypress variable
CYPRESS_ENV_VAR2: my other Cypress variable

Application Data: /user/app/data/path
Browser Profiles: /user/app/data/path/to/browsers
Binary Caches: /user/path/to/binary/cache

Cypress Version: 0.0.0-development (stable)
System Platform: linux (Foo - OsVersion)
System Memory: 1.2 GB free 400 MB
"
`;

exports[`exec info > redacts sensitive cypress variables > cypress redacts sensitive vars 1`] = `
"
Proxy Settings: none detected
Environment Variables:
CYPRESS_ENV_VAR1: my Cypress variable
CYPRESS_ENV_VAR2: my other Cypress variable
CYPRESS_PROJECT_ID: abc123
CYPRESS_RECORD_KEY: <redacted>

Application Data: /user/app/data/path
Browser Profiles: /user/app/data/path/to/browsers
Binary Caches: /user/path/to/binary/cache

Cypress Version: 0.0.0-development (stable)
System Platform: linux (Foo - OsVersion)
System Memory: 1.2 GB free 400 MB
"
`;
